<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HistoryFragment"
    android:id="@+id/root_layer">

    <TextView
        android:id="@+id/textCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/calculator_name"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:typeface="sans" />

    <TableLayout
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textCalc">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_light"
                android:text="@string/period"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:typeface="sans" />

            <EditText
                android:id="@+id/period"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:layout_weight="1"
                android:phoneNumber="true"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:background = "@drawable/edit_text_background"/>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_light"
                android:text="@string/working_time"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:typeface="sans" />

            <EditText
                android:id="@+id/workingTime"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:layout_weight="1"
                android:phoneNumber="true"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:background = "@drawable/edit_text_background"/>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_light"
                android:text="@string/hoursalary"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:typeface="sans" />

            <EditText
                android:id="@+id/hourSalary"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:layout_weight="1"
                android:phoneNumber="true"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:background = "@drawable/edit_text_background"/>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_light"
                android:text="@string/additionalhour"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:typeface="sans" />

            <EditText
                android:id="@+id/additionalHour"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:layout_weight="1"
                android:phoneNumber="true"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:background = "@drawable/edit_text_background"/>
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/CalculateBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/table"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="125dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/ripple_btn"
        android:text="@string/calculate"
        android:textColor="@color/black" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/CalculateBtn"
        android:layout_marginTop="20dp">

        <TableRow
            android:id="@+id/table1"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_light"
                android:text="@string/salary"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:typeface="sans" />

            <TextView
                android:id="@+id/salary"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_light"
                android:text=""
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="22sp" />
        </TableRow>

    </TableLayout>


</RelativeLayout>